# routes/urls.js
@@ -3,6 +3,10 @@ const UrlsController = require("../controllers/Urls.Controller");
 
 const router = require("express").Router();
 
+router.get("/userUrls", UrlsController.getUrls);
+
 router.post("/shorten", validateNewShortUrlInput, UrlsController.createShortUrl);
+
+
 
 module.exports = router;
